# uagents-trace

./: .gitignore  LICENSE  README.md  my_test_agents.py  pyproject.toml
.github/workflows/: test.yml
examples/: chat_session.py  orchestrator_fanout.py  payment_flow.py  two_agents.py
tests/: conftest.py  test_inspector_empty_state.py  test_inspector_panel.py  test_live_format.py  test_network_canvas.py  test_payload_summary.py  test_server.py  test_shape.py  test_splash_screen.py
uagents_trace/: __init__.py  brand.py  cli.py  live.py  network_canvas.py  protocols.py  recorder.py  server.py  shape.py  store.py  tui.py  wizard.py
uagents_trace/ui/: index.html
